- overrode shadow style for header buttons - added base styles for app colours - fixes margins and padding everywhere - changed top header to H5 - changes next headers to H6 - reformatted text that wrapped - centered some stuff that wasn't - delete obsolete SASS overrides

--- a/client/src/assets/scss/base.scss
+++ b/client/src/assets/scss/base.scss
@@ -69,6 +69,18 @@
   background-color: $app-light-blue !important;
 }
 
+.app-blue {
+  color: $app-blue !important;
+}
+
+.app-red {
+  color: $app-red !important;
+}
+
+.app-green {
+  color: $app-green !important;
+}
+
 // normal button: white on blue
 .button-normal {
   color: white !important;
