--- a/client/src/sass/overrides.sass
+++ b/client/src/sass/overrides.sass
@@ -147,12 +147,6 @@ input#name-generator-1, input#name-generator-2
 #applicant-info-slider .v-slide-group
   display: none !important
 
-#applicant-info-3-form div.col:not(.submission-tabs-top)
-  padding: 0 10px 8px 5px !important
-
-#applicant-info-2-form div.col:not(.submission-tabs-top)
-  padding: 0 10px 12px 5px !important
-
 #send_to_examiner-button-checkbox-col .v-messages
   display: none
 
